Handle providers that don't create
