# crates/goose-server/src/openapi.rs
@@ -344,6 +344,8 @@ derive_utoipa!(Icon as IconSchema);
         super::routes::config_management::get_custom_provider,
         super::routes::config_management::update_custom_provider,
         super::routes::config_management::remove_custom_provider,
+        super::routes::config_management::check_provider,
+        super::routes::config_management::set_provider,
         super::routes::agent::start_agent,
         super::routes::agent::resume_agent,
         super::routes::agent::get_tools,
@@ -394,6 +396,8 @@ derive_utoipa!(Icon as IconSchema);
         super::routes::config_management::ToolPermission,
         super::routes::config_management::UpsertPermissionsQuery,
         super::routes::config_management::UpdateCustomProviderRequest,
+        super::routes::config_management::CheckProviderRequest,
+        super::routes::config_management::SetProviderRequest,
         super::routes::reply::PermissionConfirmationRequest,
         super::routes::reply::ChatRequest,
         super::routes::session::ImportSessionRequest,
